[gd_scene load_steps=21 format=2]

[ext_resource path="res://Level1/Minigame1/Sun.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level1/Minigame1/Truck.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level1/Minigame1/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Themes/Infoblock.tres" type="Theme" id=5]
[ext_resource path="res://Level1/Minigame1/Minigame1.gd" type="Script" id=6]
[ext_resource path="res://Level1/Minigame1/Minigame1_HUD.gd" type="Script" id=7]
[ext_resource path="res://Level1/Minigame1/Assets/Sprites/ground_dry.jpeg" type="Texture" id=8]
[ext_resource path="res://Level1/Minigame1/Assets/Sprites/ground_wet.jpeg" type="Texture" id=9]
[ext_resource path="res://Level1/Minigame1/Assets/SFX/pickupArtefact.wav" type="AudioStream" id=10]
[ext_resource path="res://Level1/Minigame1/Assets/Sprites/Artefacts/Figure.png" type="Texture" id=11]
[ext_resource path="res://Level1/Minigame1/Assets/Sprites/Artefacts/Horse.png" type="Texture" id=12]
[ext_resource path="res://Level1/Minigame1/Assets/Sprites/Artefacts/Chain.png" type="Texture" id=13]
[ext_resource path="res://Level1/Minigame1/Assets/Sprites/grass_tile.png" type="Texture" id=14]
[ext_resource path="res://Level1/Minigame1/Assets/Sprites/placeholder_artefact.png" type="Texture" id=15]
[ext_resource path="res://Level1/Minigame1/Assets/Sprites/Artefacts/Tiles.png" type="Texture" id=16]
[ext_resource path="res://Level1/Minigame1/Assets/SFX/truck-engine-idle-loops-33687.wav" type="AudioStream" id=17]
[ext_resource path="res://Level1/Minigame1/Assets/Sprites/Artefacts/Krug.png" type="Texture" id=18]
[ext_resource path="res://Level1/Minigame1/Assets/SFX/Sunburn2.wav" type="AudioStream" id=19]
[ext_resource path="res://Level1/Minigame1/Assets/SFX/VictoryFanfare.wav" type="AudioStream" id=20]

[sub_resource type="TileSet" id=5]
2/name = "placeholder_artefact.png 2"
2/texture = ExtResource( 15 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "ground_dry.jpeg 3"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "ground_wet.jpeg 4"
4/texture = ExtResource( 9 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Chain.png 5"
5/texture = ExtResource( 13 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Tiles.png 6"
6/texture = ExtResource( 16 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Figure.png 7"
7/texture = ExtResource( 11 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Horse.png 8"
8/texture = ExtResource( 12 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Krug.png 9"
9/texture = ExtResource( 18 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "grass_tile.png 10"
10/texture = ExtResource( 14 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 64, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0

[node name="Minigame1" type="Node2D"]
script = ExtResource( 6 )

[node name="TileMap_Ground" type="TileMap" parent="."]
tile_set = SubResource( 5 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 10, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 8, 10, 0, 9, 10, 0, 10, 10, 0, 11, 10, 0, 12, 10, 0, 13, 10, 0, 14, 10, 0, 15, 10, 0, 65536, 10, 0, 65537, 10, 0, 65538, 10, 0, 65539, 10, 0, 65540, 10, 0, 65541, 10, 0, 65542, 10, 0, 65543, 10, 0, 65544, 10, 0, 65545, 10, 0, 65546, 10, 0, 65547, 10, 0, 65548, 10, 0, 65549, 10, 0, 65550, 10, 0, 65551, 10, 0, 131072, 10, 0, 131073, 10, 0, 131074, 10, 0, 131075, 10, 0, 131076, 10, 0, 131077, 10, 0, 131078, 10, 0, 131079, 10, 0, 131080, 10, 0, 131081, 10, 0, 131082, 10, 0, 131083, 10, 0, 131084, 10, 0, 131085, 10, 0, 131086, 10, 0, 131087, 10, 0, 196608, 10, 0, 196609, 10, 0, 196610, 10, 0, 196611, 10, 0, 196612, 10, 0, 196613, 10, 0, 196614, 10, 0, 196615, 10, 0, 196616, 10, 0, 196617, 10, 0, 196618, 10, 0, 196619, 10, 0, 196620, 10, 0, 196621, 10, 0, 196622, 10, 0, 196623, 10, 0, 262144, 10, 0, 262145, 10, 0, 262146, 10, 0, 262147, 10, 0, 262148, 10, 0, 262149, 10, 0, 262150, 10, 0, 262151, 10, 0, 262152, 10, 0, 262153, 10, 0, 262154, 10, 0, 262155, 10, 0, 262156, 10, 0, 262157, 10, 0, 262158, 10, 0, 262159, 10, 0, 327680, 10, 0, 327681, 10, 0, 327682, 10, 0, 327683, 10, 0, 327684, 10, 0, 327685, 10, 0, 327686, 10, 0, 327687, 10, 0, 327688, 10, 0, 327689, 10, 0, 327690, 10, 0, 327691, 10, 0, 327692, 10, 0, 327693, 10, 0, 327694, 10, 0, 327695, 10, 0, 393216, 10, 0, 393217, 10, 0, 393218, 10, 0, 393219, 10, 0, 393220, 10, 0, 393221, 10, 0, 393222, 10, 0, 393223, 10, 0, 393224, 10, 0, 393225, 10, 0, 393226, 10, 0, 393227, 10, 0, 393228, 10, 0, 393229, 10, 0, 393230, 10, 0, 393231, 10, 0, 458752, 10, 0, 458753, 10, 0, 458754, 10, 0, 458755, 10, 0, 458756, 10, 0, 458757, 10, 0, 458758, 10, 0, 458759, 10, 0, 458760, 10, 0, 458761, 10, 0, 458762, 10, 0, 458763, 10, 0, 458764, 10, 0, 458765, 10, 0, 458766, 10, 0, 458767, 10, 0, 524288, 10, 0, 524289, 10, 0, 524290, 10, 0, 524291, 10, 0, 524292, 10, 0, 524293, 10, 0, 524294, 10, 0, 524295, 10, 0, 524296, 10, 0, 524297, 10, 0, 524298, 10, 0, 524299, 10, 0, 524300, 10, 0, 524301, 10, 0, 524302, 10, 0, 524303, 10, 0, 589824, 10, 0, 589825, 10, 0, 589826, 10, 0, 589827, 10, 0, 589828, 10, 0, 589829, 10, 0, 589830, 10, 0, 589831, 10, 0, 589832, 10, 0, 589833, 10, 0, 589834, 10, 0, 589835, 10, 0, 589836, 10, 0, 589837, 10, 0, 589838, 10, 0, 589839, 10, 0, 655360, 10, 0, 655361, 10, 0, 655362, 10, 0, 655363, 10, 0, 655364, 10, 0, 655365, 10, 0, 655366, 10, 0, 655367, 10, 0, 655368, 10, 0, 655369, 10, 0, 655370, 10, 0, 655371, 10, 0, 655372, 10, 0, 655373, 10, 0, 655374, 10, 0, 655375, 10, 0, 720896, 10, 0, 720897, 10, 0, 720898, 10, 0, 720899, 10, 0, 720900, 10, 0, 720901, 10, 0, 720902, 10, 0, 720903, 10, 0, 720904, 10, 0, 720905, 10, 0, 720906, 10, 0, 720907, 10, 0, 720908, 10, 0, 720909, 10, 0, 720910, 10, 0, 720911, 10, 0, 786432, 10, 0, 786433, 10, 0, 786434, 10, 0, 786435, 10, 0, 786436, 10, 0, 786437, 10, 0, 786438, 10, 0, 786439, 10, 0, 786440, 10, 0, 786441, 10, 0, 786442, 10, 0, 786443, 10, 0, 786444, 10, 0, 786445, 10, 0, 786446, 10, 0, 786447, 10, 0, 851968, 10, 0, 851969, 10, 0, 851970, 10, 0, 851971, 10, 0, 851972, 10, 0, 851973, 10, 0, 851974, 10, 0, 851975, 10, 0, 851976, 10, 0, 851977, 10, 0, 851978, 10, 0, 851979, 10, 0, 851980, 10, 0, 851981, 10, 0, 851982, 10, 0, 851983, 10, 0, 917504, 10, 0, 917505, 10, 0, 917506, 10, 0, 917507, 10, 0, 917508, 10, 0, 917509, 10, 0, 917510, 10, 0, 917511, 10, 0, 917512, 10, 0, 917513, 10, 0, 917514, 10, 0, 917515, 10, 0, 917516, 10, 0, 917517, 10, 0, 917518, 10, 0, 917519, 10, 0, 983040, 10, 0, 983041, 10, 0, 983042, 10, 0, 983043, 10, 0, 983044, 10, 0, 983045, 10, 0, 983046, 10, 0, 983047, 10, 0, 983048, 10, 0, 983049, 10, 0, 983050, 10, 0, 983051, 10, 0, 983052, 10, 0, 983053, 10, 0, 983054, 10, 0, 983055, 10, 0, 1048576, 10, 0, 1048577, 10, 0, 1048578, 10, 0, 1048579, 10, 0, 1048580, 10, 0, 1048581, 10, 0, 1048582, 10, 0, 1048583, 10, 0, 1048584, 10, 0, 1048585, 10, 0, 1048586, 10, 0, 1048587, 10, 0, 1048588, 10, 0, 1048589, 10, 0, 1048590, 10, 0, 1048591, 10, 0 )

[node name="TileMap_Artefacts" type="TileMap" parent="."]
tile_set = SubResource( 5 )
collision_layer = 4
collision_mask = 4
format = 1

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 514, 352 )
collision_mask = 257

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 10 )

[node name="Sun" parent="." instance=ExtResource( 1 )]
position = Vector2( 477, 36 )
max_speed = 800.0
starting_position = Vector2( 475, 32 )
direction = Vector2( 0.5, 1.5 )

[node name="AudioSun" type="AudioStreamPlayer2D" parent="Sun"]
stream = ExtResource( 19 )

[node name="Truck" parent="." groups=["truck"] instance=ExtResource( 2 )]
position = Vector2( 32, 32 )
speed = 400.0
starting_position = Vector2( 32, 32 )

[node name="AudioTruck" type="AudioStreamPlayer2D" parent="Truck"]
position = Vector2( -32, -32 )
stream = ExtResource( 17 )

[node name="ArtefactSpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="AudioSuccess" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )

[node name="Minigame1_HUD" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="ScoreLabel" type="Label" parent="Minigame1_HUD"]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = 1064.0
margin_top = 21.0
margin_right = 1127.0
margin_bottom = 98.0
theme = ExtResource( 5 )
text = " 0"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StartButton" type="Button" parent="Minigame1_HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 417.0
margin_top = 876.0
margin_right = 607.0
margin_bottom = 958.0
theme = ExtResource( 5 )
disabled = true
text = "START"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MessageLabel" type="RichTextLabel" parent="Minigame1_HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -251.0
margin_top = 143.0
margin_right = 1293.0
margin_bottom = 839.0
theme = ExtResource( 5 )

[node name="LeaveButton" type="Button" parent="Minigame1_HUD"]
visible = false
margin_left = 417.0
margin_top = 876.0
margin_right = 607.0
margin_bottom = 958.0
theme = ExtResource( 5 )
text = "Leave"

[connection signal="score_up" from="." to="Minigame1_HUD" method="_on_Minigame1_score_up"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="hit" from="Player" to="Minigame1_HUD" method="_on_Player_hit"]
[connection signal="set_marker" from="Player" to="." method="_on_Player_set_marker"]
[connection signal="direction_change" from="Sun" to="." method="_on_Sun_direction_change"]
[connection signal="truck_stopped" from="Truck" to="." method="_on_Truck_truck_stopped"]
[connection signal="timeout" from="ArtefactSpawnTimer" to="." method="_on_ArtefactSpawnTimer_timeout"]
[connection signal="start_game" from="Minigame1_HUD" to="." method="_on_Minigame1_HUD_start_game"]
[connection signal="start_game" from="Minigame1_HUD" to="Player" method="start"]
[connection signal="start_game" from="Minigame1_HUD" to="Sun" method="start"]
[connection signal="start_game" from="Minigame1_HUD" to="Truck" method="start"]
[connection signal="button_up" from="Minigame1_HUD/StartButton" to="Minigame1_HUD" method="_on_StartButton_button_up"]
[connection signal="pressed" from="Minigame1_HUD/LeaveButton" to="." method="_on_LeaveButton_pressed"]
